LPD-45650 add support for inheritance in batch import